about trying to fix the height difference of the faq header when running on mobile

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -5,6 +5,8 @@ body {
     padding-bottom: 6rem; /* Helps with making footer show after error */
 }
 
+/* Navbar */
+
 .top_bar {
     background-color: #2d3e50;
     border-color: #2d3e50;
@@ -52,6 +54,7 @@ a:hover {
     background-color: #fff !important;
 }
 
+
 /* Form aspect */
 
 .field_with_errors .help-block,
@@ -86,9 +89,20 @@ a:hover {
   color: #a94442;
 }
 
-/**
- * Footer Styles
- */
+/* #error_explanation {
+  color: red;
+}*/
+
+#error_explanation ul {
+  color: red;
+  margin: 0 0 30px 0;
+}
+
+/* FAQ */
+/*.col-md-5 { margin-top: 30px; }*/
+
+
+/* Footer Styles */
 
 .footer {
     position: absolute;
